--- a/public/index.html
+++ b/public/index.html
@@ -87,27 +87,27 @@
           <div class="skill-level">Expert</div>
         </div>
         <div class="skill-item">
-          <div class="skill-name">Godot</div>
+          <div class="skill-name">HTML/CSS/JS</div>
           <div class="skill-bar-bg"><div class="skill-bar-fill" data-width="80"></div></div>
           <div class="skill-level">Advanced</div>
         </div>
         <div class="skill-item">
-          <div class="skill-name">React / Next.js</div>
+          <div class="skill-name">React / Next.js / Three.js</div>
           <div class="skill-bar-bg"><div class="skill-bar-fill" data-width="88"></div></div>
           <div class="skill-level">Expert</div>
         </div>
         <div class="skill-item">
-          <div class="skill-name">Node.js / Express</div>
+          <div class="skill-name">Node.js / Express.js</div>
           <div class="skill-bar-bg"><div class="skill-bar-fill" data-width="85"></div></div>
           <div class="skill-level">Advanced</div>
         </div>
         <div class="skill-item">
-          <div class="skill-name">Three.js / WebGL</div>
+          <div class="skill-name">C++</div>
           <div class="skill-bar-bg"><div class="skill-bar-fill" data-width="75"></div></div>
           <div class="skill-level">Intermediate</div>
         </div>
         <div class="skill-item">
-          <div class="skill-name">Python</div>
+          <div class="skill-name">Blender</div>
           <div class="skill-bar-bg"><div class="skill-bar-fill" data-width="78"></div></div>
           <div class="skill-level">Advanced</div>
         </div>
@@ -261,8 +261,8 @@
   </section>
 
   <footer>
-    <span>© 2025 YourName. All rights reserved.</span>
-    <span>Built with HTML · CSS · JS</span>
+    <span>© 2026 Anukul. All rights reserved.</span>
+    <span>Built with HTML · CSS · JS and Backend useing Express</span>
   </footer>
 
   <script src="main.js"></script>
