--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Anukul — Game & Web Dev</title>
+  <title>Anukul.live</title>
   <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&family=Syne:wght@400;700;800&family=DM+Sans:wght@300;400&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css"/>
 </head>
@@ -22,6 +22,7 @@
       <li><a href="#projects">Projects</a></li>
       <li><a href="#showcase-preview">Showcase</a></li>
       <li><a href="#contact">Contact</a></li>
+      <li><a href="https://devtales.onrender.com/">Blogs</a></li>
     </ul>
     <button id="theme-toggle" aria-label="Toggle dark/light mode">
       <span class="toggle-icon moon">🌙</span>
@@ -235,9 +236,10 @@
         <div class="contact-info reveal">
           <p>Whether you have a game idea, a web project, or just want to talk tech — my inbox is open. I'm currently available for freelance work and collaborations.</p>
           <div class="contact-social">
-            <a href="#" class="social-link">GitHub</a>
-            <a href="#" class="social-link">LinkedIn</a>
-            <a href="#" class="social-link">Twitter / X</a>
+            <a href="http://github.com/AnukulPr1me" class="social-link">GitHub</a>
+            <a href="https://www.linkedin.com/in/anukul-chandra/" class="social-link">LinkedIn</a>
+            <a href="#" class="social-link">Sketchfab</a>
+            <a href="#" class="social-link">Artstation</a>
             <a href="#" class="social-link">itch.io</a>
           </div>
         </div>
@@ -277,7 +279,7 @@
 
   <footer>
     <span>© 2026 Anukul. All rights reserved.</span>
-    <span>Built with HTML · CSS · JS and Backend using Express</span>
+    <span>Built with HTML · CSS · Javascript, Three.js and Backend using Express</span>
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
