added hamburger menu 3rd push

--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,29 @@
       <li><a href="#projects">Projects</a></li>
       <li><a href="#showcase-preview">Showcase</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li><a href="https://devtales.onrender.com/">Blogs</a></li>
+      <li><a href="https://devtales.onrender.com/" target="_blank" rel="noopener">Blogs</a></li>
     </ul>
-    <button id="theme-toggle" aria-label="Toggle dark/light mode">
-      <span class="toggle-icon moon">🌙</span>
-      <span class="toggle-icon sun">☀️</span>
-    </button>
+    <div class="nav-right">
+      <button id="theme-toggle" aria-label="Toggle dark/light mode">
+        <span class="toggle-icon moon">🌙</span>
+        <span class="toggle-icon sun">☀️</span>
+      </button>
+      <button id="hamburger" aria-label="Open menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+    </div>
   </nav>
+
+  <!-- Mobile Menu -->
+  <div id="mobile-menu">
+    <a href="#about"            class="mobile-link">About</a>
+    <a href="#projects"         class="mobile-link">Projects</a>
+    <a href="#showcase-preview" class="mobile-link">Showcase</a>
+    <a href="#contact"          class="mobile-link">Contact</a>
+    <a href="https://devtales.onrender.com/" class="mobile-link" target="_blank" rel="noopener">Blogs</a>
+  </div>
 
   <!-- ═══════════════════════════════════════════════════════
        HERO — full screen
@@ -236,8 +252,8 @@
         <div class="contact-info reveal">
           <p>Whether you have a game idea, a web project, or just want to talk tech — my inbox is open. I'm currently available for freelance work and collaborations.</p>
           <div class="contact-social">
-            <a href="http://github.com/AnukulPr1me" class="social-link">GitHub</a>
-            <a href="https://www.linkedin.com/in/anukul-chandra/" class="social-link">LinkedIn</a>
+            <a href="http://github.com/AnukulPr1me" class="social-link" target="_blank" rel="noopener">GitHub</a>
+            <a href="https://www.linkedin.com/in/anukul-chandra/" class="social-link" target="_blank" rel="noopener">LinkedIn</a>
             <a href="#" class="social-link">Sketchfab</a>
             <a href="#" class="social-link">Artstation</a>
             <a href="#" class="social-link">itch.io</a>
